# Isec

./: Projeto_PA  README.md
Projeto_BD/: BD_Temas.docx  TrabalhoBD.cdm
Projeto_CR/TP/: Estudos CR.xlsx  Train_alt.csv  cbr.m  nn_start.mat  nn_train_alt.mat  redes_neuronais.docx  retrieve.m  start_v2.m  test_v2.m  train_v2.m
Projeto_TWEB/sotheby's/: estilos.css  index.html  logica.js  website_1.html
Projetos_IIA/TP1/: IIA-TP1.docx
Projetos_IIA/TP1/TP/: CarolinaPimenta&CarolinaVeloso.nlogo  Experie╠éncias.xlsx
Projetos_IIA/TP2/: tp2.txt  trepa colinas_evolutivo_hibrido.xlsx
Projetos_IIA/TP2/Hibrido/: CMakeLists.txt
Projetos_IIA/TP2/Hibrido/Hibrido/: CMakeLists.txt  algoritmo.c  algoritmo.h  funcao.c  funcao.h  main.c  utils.c  utils.h
Projetos_MD/FASE1/: FASE 1 - MD.docx  PlanoEstrutural_1.docx
Projetos_MD/FASE2/: CASO_USO.docx  datividades.mdj  mdominio.mdj
Projetos_MD/FASE3/: ClassConfirma.mdj  DSS.mdj  DssLogin.mdj  Dssconfirma.mdj
Projetos_PROG/Desafio1/: 2021140780.c  CMakeLists.txt
Projetos_PROG/Desafio2/: 2021140780.c  CMakeLists.txt  funcao.h  main.c
Projetos_PROG/Desafio3/: 2021140780.c  CMakeLists.txt  desafio.c  desafio.h  lista.h  main.c
Projetos_PROG/Desafio4/: 2021140780.c  CMakeLists.txt  main.c  parque.h
TP_LS/minesweeper-game-react/: package.json
Trabalho_AM2/Trabalho01/: MOde45.m  MenuMNPVI.m  NEuler1.mlx  NEuler_M.m  N_Euler.m  N_ODE45.m  N_PM.m  N_RK2.m  N_RK4.m  Relatório1.docx  Relatório2 (1).docx  Relatório2.docx  ~$latório1.docx
Trabalho_AM2/Trabalho02/: Relatorio02-Final.docx  Relatorio1-tbr2.docx
test/: README.md
(+94 files in other folders)
